<resources>
    <string name="app_name">PosiFinder</string>
    <string name="action_settings">Settings</string>
    <string name="about_app">About this App</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

<!--    UI-->
    <string name="btn_fetch_method_getLast">getLast()</string>
    <string name="btn_fetch_method_getCurrent">getCurrent()</string>
    <string name="btn_fetch_method_request_updates">requestUpdates()</string>

    <string name="background_permission_title">Set Background Permission</string>
    <string name="background_permission">Please go to settings and select "Always" as location permission.</string>
    <string name="yes">yes</string>
    <string name="cancel">cancel</string>

    <!--Shared Preferences Storage IDs-->
    <string name="pref_file" translatable="false">preferences</string>
    <string name="pref_id_latitude" translatable="false">pref_id_latitude</string>
    <string name="pref_id_longitude" translatable="false">pref_id_longitude</string>
    <string name="pref_id_title" translatable="false">pref_id_title</string>
    <string name="pref_id_last_used_posifinder" translatable="false">pref_id_last_used_posifinder</string>
    <string name="pref_id_last_used_save_position" translatable="false">pref_id_last_used_save_position</string>
    <string name="pref_id_last_used_save_position_2" translatable="false">pref_id_last_used_save_position_2</string>
    <string name="pref_id_fetch_method" translatable="false">pref_id_fetch_method</string>

    <!-- For Shortcuts   -->
    <!--    <string name="short_shortcut" translatable="false">Save Posi</string>-->
    <!--    <string name="long_shortcut" translatable="false"> Save Position</string>-->
    <string name="disabled_shortcut_label" translatable="false">Disabled Save Position</string>
    <string name="short_shortcut_label" translatable="false">Save Posi</string>
    <string name="long_shortcut_label" translatable="false">Save Position</string>

    <string name="disabled_shortcut_label_2" translatable="false">Disabled Save Position 2</string>
    <string name="short_shortcut_label_2" translatable="false">Save Posi 2</string>
    <string name="long_shortcut_label_2" translatable="false">Save Position 2</string>


    <string name="EXTRA_START_ACTIVITY_IN_BACKGROUND" translatable="false">EXTRA_START_ACTIVITY_IN_BACKGROUND</string>
    <string name="EXTRA_START_ACTIVITY_IN_BACKGROUND_2" translatable="false">EXTRA_START_ACTIVITY_IN_BACKGROUND_2</string>


    <!--About App-->
    <string name="toolbar_label_about_app">About this App</string>
    <string name="label_about_author_title">Author</string>
    <string name="label_about_author_content">This android app was created by Lukas Mechura in December 2023.</string>
    <string name="label_about_contact_title">Contact</string>
    <string name="label_about_contact_content" translatable="false">mastermuko@t-online.de</string>
    <string name="label_about_license_title">License</string>
    <string name="label_about_license_content" translatable="false">MIT LICENSE \nCopyright 2023 Lukas Mechura \n\nPermission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions: \n\nThe above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software. \n\nTHE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</string>


</resources>